--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,21 +20,26 @@ set(CMAKE_DEPS_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/deps)
 set(CMAKE_SHARED_LIBRARY_PREFIX "liblarch_")
 set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib;${CMAKE_INSTALL_PREFIX}/lib/larch")
 
-set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+option(PROTOBUF_FROM_SOURCE "Build protobuf from source code" ON)
 option(USE_USHER "Use matOptimize" ON)
-option(PROTOBUF_FROM_SOURCE "Build protobuf from source code" OFF)
+option(USE_MAT_VIEW "Use MATView" ON)
+option(USE_CPPTRACE "Use cpptrace" OFF)
+option(USE_ASAN "Use asan" OFF)
+option(USE_TSAN "Use tsan" OFF)
+option(USE_HTSLIB "Use htslib" OFF)
 
 # set default cmake build type
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type (Debug, Release, RelWithDebInfo, MinSizeRel)" FORCE)
 endif()
 
-if(${USE_USHER})
-  set(TBB_VERSION "2019_U9")
+if(USE_USHER)
+    set(TBB_VERSION "2019_U9")
 else()
-  set(TBB_VERSION "v2021.11.0")
+    set(TBB_VERSION "v2021.11.0")
 endif()
 
 message(STATUS "cmake system architecture: ${CMAKE_SYSTEM_PROCESSOR}")
@@ -57,7 +62,7 @@ function(lib_install PRODUCT)
 endfunction()
 
 # # oneTBB
-if(${USE_USHER})
+if(USE_USHER)
   set(TBB_DIR "${PROJECT_BINARY_DIR}/deps/onetbb")
   FetchContent_Declare(oneTBB
     GIT_REPOSITORY https://github.com/oneapi-src/oneTBB
@@ -65,14 +70,13 @@ if(${USE_USHER})
     GIT_SHALLOW true
     GIT_PROGRESS true
     UPDATE_DISCONNECTED true
-    CMAKE_ARGS -DCMAKE_BUILD_TYPE=Release -DTBB_TEST=OFF -DTBB_FIND_PACKAGE=OFF
-  )
+ )
   FetchContent_MakeAvailable(oneTBB)
   include(${onetbb_SOURCE_DIR}/cmake/TBBBuild.cmake)
   tbb_build(
     TBB_ROOT ${onetbb_SOURCE_DIR}
     CONFIG_DIR TBB_DIR
-    MAKE_ARGS tbb_cpf=1 CFLAGS="-w" tbb_build_dir=${TBB_DIR}
+    MAKE_ARGS tbb_cpf=1 CFLAGS="-w" CXXFLAGS="-Wno-changes-meaning" tbb_build_dir=${TBB_DIR}
   )
 
   find_package(TBB REQUIRED COMPONENTS tbbmalloc tbbmalloc_proxy tbb_preview)
@@ -92,22 +96,16 @@ else()
     CMAKE_ARGS -DCMAKE_BUILD_TYPE=Release -DTBB_TEST=OFF -DTBB_FIND_PACKAGE=OFF
   )
   FetchContent_MakeAvailable(oneTBB)
-
-  find_package(TBB REQUIRED COMPONENTS tbbmalloc tbbmalloc_proxy tbb_preview)
-  lib_install(TBB::tbbmalloc)
-  lib_install(TBB::tbbmalloc_proxy)
-  lib_install(TBB::tbb_preview)
 endif()
 
 # # protobuf
-if(${PROTOBUF_FROM_SOURCE})
+if(PROTOBUF_FROM_SOURCE)
   message(STATUS "protobuf from source...")
   include(protobuf.cmake)
 else()
   message(STATUS "protobuf from conda environment...")
+  find_package(Protobuf REQUIRED)
 endif()
-
-find_package(Protobuf REQUIRED)
 
 add_library(larch-autogen OBJECT
   ${DAG_PROTO_SRCS} ${DAG_PROTO_HDRS}
@@ -141,14 +139,23 @@ ExternalProject_Add(range-v3
   GIT_TAG 0.12.0
   GIT_SHALLOW true
   GIT_PROGRESS true
+  GIT_SUBMODULES ""
   UPDATE_DISCONNECTED true
   CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}/deps/range-v3/install -DCMAKE_BUILD_TYPE=Release -DRANGE_V3_DOCS=OFF -DRANGE_V3_TESTS=OFF -DRANGE_V3_EXAMPLES=OFF -DRANGE_V3_PERF=OFF -DRANGE_V3_HEADER_CHECKS=OFF
   PREFIX deps/range-v3
   INSTALL_DIR deps/range-v3/install
 )
 
+if(USE_CPPTRACE)
+FetchContent_Declare(cpptrace
+  GIT_REPOSITORY https://github.com/jeremy-rifkin/cpptrace.git
+  GIT_TAG v0.8.2
+  GIT_PROGRESS true)
+FetchContent_MakeAvailable(cpptrace)
+endif()
+
 # # htslib
-if(${USE_HTSLIB})
+if(USE_HTSLIB)
   ExternalProject_Add(htslib
     GIT_REPOSITORY https://github.com/samtools/htslib.git
     GIT_TAG 1.17
@@ -194,13 +201,21 @@ function(larch_compile_opts PRODUCT)
     target_compile_options(${PRODUCT} PUBLIC -fno-omit-frame-pointer -fno-stack-protector)
   endif()
 
-  if(${USE_USHER})
+  if(USE_USHER)
     target_compile_options(${PRODUCT} PUBLIC -DUSE_USHER)
   endif()
 
-  if(${USE_ASAN})
+  if(USE_MAT_VIEW)
+    target_compile_options(${PRODUCT} PUBLIC -DUSE_MAT_VIEW)
+  endif()
+
+  if(USE_CPPTRACE)
+    target_compile_options(${PRODUCT} PUBLIC -DUSE_CPPTRACE)
+  endif()
+
+  if(USE_ASAN)
     target_compile_options(${PRODUCT} PUBLIC -O0 -g3 -fsanitize=address,undefined -fno-sanitize-recover)
-  elseif(${USE_TSAN})
+  elseif(USE_TSAN)
     target_compile_options(${PRODUCT} PUBLIC -O0 -g3 -fsanitize=thread)
   endif()
 
@@ -211,13 +226,13 @@ function(larch_compile_opts PRODUCT)
   target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/deps/range-v3/install/include)
   add_dependencies(${PRODUCT} range-v3)
 
-  if(${USE_HTSLIB})
+  if(USE_HTSLIB)
     target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/deps/htslib/install/include)
     add_dependencies(${PRODUCT} htslib)
   endif()
 endfunction()
 
-if(${USE_USHER})
+if(USE_USHER)
   include_directories(deps/usher/)
   file(GLOB MATOPTIMIZE_SRC
     "deps/usher/src/matOptimize/apply_move/*.cpp"
@@ -244,9 +259,9 @@ endif()
 function(larch_link_opts PRODUCT)
   target_link_libraries(${PRODUCT} PUBLIC larch-autogen)
 
-  if(${USE_ASAN})
+  if(USE_ASAN)
     target_link_libraries(${PRODUCT} PUBLIC -lasan -lubsan)
-  elseif(${USE_TSAN})
+  elseif(USE_TSAN)
     target_link_libraries(${PRODUCT} PUBLIC -ltsan)
   endif()
 
@@ -255,13 +270,13 @@ function(larch_link_opts PRODUCT)
   target_link_libraries(${PRODUCT} PUBLIC ${Protobuf_LIBRARIES})
   target_link_libraries(${PRODUCT} PUBLIC ${Boost_LIBRARIES})
 
-  if(${USE_USHER})
+  if(USE_USHER)
     target_link_libraries(${PRODUCT} PUBLIC TBB::tbbmalloc TBB::tbbmalloc_proxy TBB::tbb_preview -lstdc++fs)
   else()
     target_link_libraries(${PRODUCT} PUBLIC TBB::tbb)
   endif()
 
-  if(${USE_HTSLIB})
+  if(USE_HTSLIB)
     target_link_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/htslib/install)
     target_link_libraries(${PRODUCT} PUBLIC -lhts)
   endif()
@@ -293,7 +308,7 @@ add_library(larch
 larch_compile_opts(larch)
 target_compile_options(larch PRIVATE ${STRICT_WARNINGS})
 
-if(${USE_ASAN})
+if(USE_ASAN)
 else()
   target_compile_options(larch PRIVATE -Wstack-usage=2048)
 endif()
@@ -301,7 +316,7 @@ endif()
 larch_link_opts(larch)
 
 # # usher library
-if(${USE_USHER})
+if(USE_USHER)
   add_library(usher
     ${MATOPTIMIZE_SRC}
     src/usher_globals.cpp
@@ -357,6 +372,7 @@ larch_executable(larch-test
   test/test_lca.cpp
   test/test_map.cpp
   test/test_mat_conversion.cpp
+  test/test_mat_view.cpp
   test/test_matOptimize.cpp
   test/test_merge.cpp
   test/test_overlay.cpp
@@ -372,7 +388,7 @@ larch_executable(larch-test
 )
 target_compile_options(larch-test PRIVATE ${STRICT_WARNINGS})
 
-if(${USE_USHER})
+if(USE_USHER)
   target_link_libraries(larch-test PUBLIC larch-usher-glue usher)
   add_dependencies(larch-test larch-usher-glue)
   set_target_properties(larch-test
@@ -393,7 +409,7 @@ larch_executable(larch-dag2dot
 larch_install(larch-dag2dot)
 
 # # larch-usher
-if(${USE_USHER})
+if(USE_USHER)
   larch_executable(larch-usher
     tools/larch-usher.cpp
   )
@@ -402,3 +418,4 @@ if(${USE_USHER})
   add_dependencies(larch-usher larch-usher-glue)
   larch_install(larch-usher)
 endif()
+
