--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "deps/usher"]
 	path = deps/usher
 	url = git@github.com:matsengrp/usher.git
-	branch = add-usher-callback
+	branch = usher_sync
