--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - python
   - gcc >=12.4.0,<14.0.0
   - gxx >=12.4.0,<14.0.0
-  - cmake=3.19.6
+  - cmake>=3.19.6
   - make
   - openmpi-mpicc >=4.1.0,<5.0
   - openmpi-mpicxx >=4.1.0,<5.0
@@ -19,6 +19,7 @@ dependencies:
   - protobuf =3.12.3
   # larch: run time
   - openmpi >=4.1.0,<5.0
-  - boost-cpp =1.76
+  - boost-cpp =1.82
   - ucx >=1.16.0
   - zlib >=1.2
+  - libhwloc
