--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -489,6 +489,7 @@ larch_executable(larch-test
   test/test_netam_likelihood.cpp
   test/test_netam_kmer_encoder.cpp
   test/test_netam_model.cpp
+  test/test_ml_spr.cpp
 )
 target_compile_options(larch-test PRIVATE ${STRICT_WARNINGS})
 
